--- a/erikastyle.css
+++ b/erikastyle.css
@@ -273,3 +273,11 @@ h1 {
     text-decoration: none;
     z-index: 10;
 }
+footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  margin-top: 100px; 
+}
